--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               Alexis Gournay
               <span class="l-header__title-certificate">
                 <i class="fa-solid fa-certificate"></i>
-                <img src="assets/owl-logo.svg" alt="" width="16" height="16" />
+                <img src="assets/owl-logo.svg" alt="" width="14" height="14" />
               </span>
             </h1>
             <p class="l-header__subtitle">Brings ideas to life with code! ✨</p>
@@ -79,11 +79,10 @@
     <main class="u-container">
       <ul class="home-main__list">
         <li class="home-main__category active" id="feed">Feed</li>
-        <li class="home-main__category" id="stack">Stack</li>
         <li class="home-main__category" id="about">About</li>
-        <li class="home-main__category" id="like">I like</li>
+        <li class="home-main__category" id="expertises">Expertises</li>
       </ul>
-      <section class="home-main__card-feed" id="feed-content">
+      <section class="home-main__card-feed home-main_section" id="feed-content">
         <div class="home-main__card">
           <span class="home-main__pinned">
             <i class="fa-solid fa-thumbtack"></i>
@@ -103,7 +102,7 @@
                 </p>
               </div>
               <p class="home-main__card-tag">👋 Hello</p>
-              <h2 class="home-main__card-title">Hello World1 !</h2>
+              <h2 class="home-main__card-title">Hello World !</h2>
               <p class="home-main__card-subtitle">
                 This section is dedicated to showcasing my projects. Here,
                 you'll find a selection of projects that highlight my skills as
@@ -119,13 +118,7 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="home-main__card-feed active" id="stack-content">
         <div class="home-main__card">
-          <span class="home-main__pinned">
-            <i class="fa-solid fa-thumbtack"></i>
-            <p class="home-main__pinned-text">Pinned</p>
-          </span>
           <div class="home-main__card-content">
             <img
               src="assets/owl-avatar.svg"
@@ -139,98 +132,199 @@
                   <i class="fa-solid fa-circle"></i> 21 Feb 2024
                 </p>
               </div>
-              <p class="home-main__card-tag">👋 Hello</p>
-              <h2 class="home-main__card-title">Hello World2 !</h2>
+              <p class="home-main__card-tag">🐳 Aquarium</p>
               <p class="home-main__card-subtitle">
-                This section is dedicated to showcasing my projects. Here,
-                you'll find a selection of projects that highlight my skills as
-                a web developer.
+                Aquarium is a integration project. The objectif with this
+                project was a deepen of my knowledge.
               </p>
               <p class="home-main__card-subtitle">
-                This is the section to explore to discover my capabilities. 😁
+                I did that with <b>Html</b> and <b>Sass</b>
               </p>
+              <div class="home-main__card-img">
+                <img
+                  src="assets/AquariumPhoto1.png"
+                  alt=""
+                  width="290"
+                  height="320"
+                />
+                <div class="home-main__card-img__side-right">
+                  <img
+                    src="assets/AquariumPhoto2.png"
+                    alt=""
+                    width="290"
+                    height="160"
+                  />
+                  <img
+                    src="assets/AquariumPhoto3.png"
+                    alt=""
+                    width="290"
+                    height="160"
+                  />
+                </div>
+              </div>
               <div class="home-main__card-action">
                 <i class="fa-regular fa-heart"></i>
-                <a href=""><i class="fa-solid fa-link"></i></a>
+                <a href="https://github.com/ALwGNY/AquariumResto/tree/main"
+                  ><i class="fa-solid fa-link"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="home-main__card">
+          <div class="home-main__card-content">
+            <img
+              src="assets/owl-avatar.svg"
+              class="home-main__card-avatar"
+              alt="avatar"
+            />
+            <div class="home-main__card-content-description">
+              <div class="home-main__card-name-date">
+                <p class="home-main__card-name">Alexjs ✨</p>
+                <p class="home-main__card-date">
+                  <i class="fa-solid fa-circle"></i> 21 Feb 2024
+                </p>
+              </div>
+              <p class="home-main__card-tag">🌱 Argent Bank</p>
+              <p class="home-main__card-subtitle">
+                Argent bank is an application developed with <b>5React</b>, i
+                have learn how to communicate with a database to connect and
+                change username. I also have learn how to do a
+                <b>routes for a API</b> and the bases of <b>Redux</b> to manage
+                the states
+              </p>
+              <div class="home-main__card-img">
+                <img
+                  src="assets/ArgentBank.png"
+                  alt=""
+                  width="580"
+                  height="320"
+                />
+              </div>
+              <div class="home-main__card-action">
+                <i class="fa-regular fa-heart"></i>
+                <a href="https://github.com/ALwGNY/Argent-Bank"
+                  ><i class="fa-solid fa-link"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="home-main__card">
+          <div class="home-main__card-content">
+            <img
+              src="assets/owl-avatar.svg"
+              class="home-main__card-avatar"
+              alt="avatar"
+            />
+            <div class="home-main__card-content-description">
+              <div class="home-main__card-name-date">
+                <p class="home-main__card-name">Alexjs ✨</p>
+                <p class="home-main__card-date">
+                  <i class="fa-solid fa-circle"></i> 21 Feb 2024
+                </p>
+              </div>
+              <p class="home-main__card-tag">📸 Portfolio</p>
+              <p class="home-main__card-subtitle">
+                The project is a portfolio for photographer. I have realized on
+                this project the <b>SEO</b> in order to reach the best position
+                on the SERP in the city where she lives and then have more
+                visibility possible everywhere
+              </p>
+              <div class="home-main__card-img">
+                <img
+                  src="assets/SEOProject.png"
+                  alt=""
+                  width="590"
+                  height="360"
+                />
+              </div>
+              <div class="home-main__card-action">
+                <i class="fa-regular fa-heart"></i>
+                <a href="https://github.com/ALwGNY/Nina-Carducci"
+                  ><i class="fa-solid fa-link"></i
+                ></a>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="home-main__card-feed" id="about-content">
-        <div class="home-main__card">
-          <span class="home-main__pinned">
-            <i class="fa-solid fa-thumbtack"></i>
-            <p class="home-main__pinned-text">Pinned</p>
-          </span>
-          <div class="home-main__card-content">
-            <img
-              src="assets/owl-avatar.svg"
-              class="home-main__card-avatar"
-              alt="avatar"
-            />
-            <div class="home-main__card-content-description">
-              <div class="home-main__card-name-date">
-                <p class="home-main__card-name">Alexjs ✨</p>
-                <p class="home-main__card-date">
-                  <i class="fa-solid fa-circle"></i> 21 Feb 2024
-                </p>
-              </div>
-              <p class="home-main__card-tag">👋 Hello</p>
-              <h2 class="home-main__card-title">Hello World3 !</h2>
-              <p class="home-main__card-subtitle">
-                This section is dedicated to showcasing my projects. Here,
-                you'll find a selection of projects that highlight my skills as
-                a web developer.
-              </p>
-              <p class="home-main__card-subtitle">
-                This is the section to explore to discover my capabilities. 😁
-              </p>
-              <div class="home-main__card-action">
-                <i class="fa-regular fa-heart"></i>
-                <a href=""><i class="fa-solid fa-link"></i></a>
-              </div>
-            </div>
-          </div>
+      <section class="home-main__about home-main_section" id="about-content">
+        <div class="home-main__about-container">
+          <h2 class="home-main__about-title">Heyyy !🌍</h2>
+          <p class="home-main__about-subtitle">
+            My name is Alexis (or Alexjs, "js" replaces the "is" of "Alexis", in
+            reference to JS javascript, I think I don't need explain this, the
+            explanation of the pun is too long currently 😬). I am a web
+            developer looking for a work-study program.
+          </p>
+          <p class="home-main__about-subtitle">
+            I really like web development, mainly integration, creating a
+            quality user experience, as well as solving complex problems, a
+            field which has always aroused my interest and for which I have had
+            the possibility of exploring during different internships and at
+            school.
+          </p>
+          <p class="home-main__about-subtitle">
+            So no, I don't have any initial training in computers (even though I
+            spent a lot, a lot, a lot of time on the computer). I come from the
+            electricity and heating field as a technician/troubleshooter. I have
+            always worked in a team and I like that !
+          </p>
+          <p class="home-main__about-subtitle">
+            My little presentation is now finished. If you want to know more,
+            you know where to contact me 😉
+          </p>
+          <p class="home-main__about-subtitle">
+            Thanks for taking the time to read!
+          </p>
         </div>
       </section>
-      <section class="home-main__card-feed" id="like-content">
-        <div class="home-main__card">
-          <span class="home-main__pinned">
-            <i class="fa-solid fa-thumbtack"></i>
-            <p class="home-main__pinned-text">Pinned</p>
-          </span>
-          <div class="home-main__card-content">
-            <img
-              src="assets/owl-avatar.svg"
-              class="home-main__card-avatar"
-              alt="avatar"
-            />
-            <div class="home-main__card-content-description">
-              <div class="home-main__card-name-date">
-                <p class="home-main__card-name">Alexjs ✨</p>
-                <p class="home-main__card-date">
-                  <i class="fa-solid fa-circle"></i> 21 Feb 2024
-                </p>
-              </div>
-              <p class="home-main__card-tag">👋 Hello</p>
-              <h2 class="home-main__card-title">Hello World4 !</h2>
-              <p class="home-main__card-subtitle">
-                This section is dedicated to showcasing my projects. Here,
-                you'll find a selection of projects that highlight my skills as
-                a web developer.
-              </p>
-              <p class="home-main__card-subtitle">
-                This is the section to explore to discover my capabilities. 😁
-              </p>
-              <div class="home-main__card-action">
-                <i class="fa-regular fa-heart"></i>
-                <a href=""><i class="fa-solid fa-link"></i></a>
-              </div>
-            </div>
+      <section
+        class="home-main__expertises home-main_section"
+        id="expertises-content"
+      >
+        <div class="home-main__expertises-container">
+          <p class="home-main__expertises-surtitle">
+            So as you could see in my feed. I know use
+            <b>JavaScript</b>, <b>React.js</b> with <b>Redux</b> and for css i
+            use <b>Sass</b>. These are technologies that I am exploring further
+            but I want to develop my back-end skills also to be complete and see
+            the big picture.
+          </p>
+          <h2 class="home-main__expertises-title">Why JavaScript</h2>
+          <div class="home-main__expertises-subtitle-container">
+            <img src="assets/JSLogo.png" alt="" width="50" height="50">
+            <p class="home-main__expertises-subtitle">
+              JavaScript is a powerful and incredibly fun language for me. I can
+              create the dynamic experiences you desire.
+            </p>
+          </div>
+          <h2 class="home-main__expertises-title">Why React</h2>
+          <div class="home-main__expertises-subtitle-container">
+            <img src="assets/ReactLogo.svg.png" alt="" width="50" height="50">
+            <p class="home-main__expertises-subtitle">
+              I like this framework because the versatility and simplicity of
+              React make development truly enjoyable and appealing.
+            </p>
+          </div>
+          <h2 class="home-main__expertises-title">Why Sass</h2>
+          <div class="home-main__expertises-subtitle-container">
+            <img src="assets/SassLogo.png" alt="" width="50" height="50">
+            <p class="home-main__expertises-subtitle">
+              Sass is a preprocessor allowing me to have more readable and less
+              repetitive code and therefore I gain speed.
+            </p>
           </div>
         </div>
       </section>
     </main>
+    <footer class="footer__info u-container">
+      <div class="footer__link">
+        <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href=""><i class="fa-brands fa-github"></i></a>
+      </div>
+      <p class="footer__copyright">Alexis Gournay © 2024</p>
+    </footer>
   </body>
 </html>
