--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
         <a class="navbar__link" href=""
           ><img src="./assets/owl-logo.svg" alt="logo" width="36" height="36"
         /></a>
-        <button class="navbar__button-toggle">
-          <img src="./assets/github.svg" alt="" width="36" height="36" />
-        </button>
       </nav>
       <div class="u-container l-header__container">
         <img
@@ -82,7 +79,10 @@
         <li class="home-main__category" id="about">About</li>
         <li class="home-main__category" id="expertises">Expertises</li>
       </ul>
-      <section class="home-main__card-feed home-main_section" id="feed-content">
+      <section
+        class="home-main__card-feed home-main__section"
+        id="feed-content"
+      >
         <div class="home-main__card">
           <span class="home-main__pinned">
             <i class="fa-solid fa-thumbtack"></i>
@@ -249,7 +249,7 @@
           </div>
         </div>
       </section>
-      <section class="home-main__about home-main_section" id="about-content">
+      <section class="home-main__about home-main__section" id="about-content">
         <div class="home-main__about-container">
           <h2 class="home-main__about-title">Heyyy !🌍</h2>
           <p class="home-main__about-subtitle">
@@ -281,7 +281,7 @@
         </div>
       </section>
       <section
-        class="home-main__expertises home-main_section"
+        class="home-main__expertises home-main__section"
         id="expertises-content"
       >
         <div class="home-main__expertises-container">
@@ -292,25 +292,55 @@
             but I want to develop my back-end skills also to be complete and see
             the big picture.
           </p>
-          <h2 class="home-main__expertises-title">Why JavaScript</h2>
+          <h2 class="home-main__expertises-title">
+            <mark class="home-main__expertises-title-underline-JS"
+              >Why JavaScript ¿</mark
+            >
+          </h2>
           <div class="home-main__expertises-subtitle-container">
-            <img src="assets/JSLogo.png" alt="" width="50" height="50">
+            <img
+              class="home-main__expertises-img"
+              src="assets/JSLogo.png"
+              alt=""
+              width="50"
+              height="50"
+            />
             <p class="home-main__expertises-subtitle">
               JavaScript is a powerful and incredibly fun language for me. I can
               create the dynamic experiences you desire.
             </p>
           </div>
-          <h2 class="home-main__expertises-title">Why React</h2>
+          <h2 class="home-main__expertises-title">
+            <mark class="home-main__expertises-title-underline-React"
+              >Why React ¿</mark
+            >
+          </h2>
           <div class="home-main__expertises-subtitle-container">
-            <img src="assets/ReactLogo.svg.png" alt="" width="50" height="50">
+            <img
+              class="home-main__expertises-img"
+              src="assets/ReactLogo.svg.png"
+              alt=""
+              width="50"
+              height="50"
+            />
             <p class="home-main__expertises-subtitle">
               I like this framework because the versatility and simplicity of
               React make development truly enjoyable and appealing.
             </p>
           </div>
-          <h2 class="home-main__expertises-title">Why Sass</h2>
+          <h2 class="home-main__expertises-title">
+            <mark class="home-main__expertises-title-underline-Sass"
+              >Why Sass ¿</mark
+            >
+          </h2>
           <div class="home-main__expertises-subtitle-container">
-            <img src="assets/SassLogo.png" alt="" width="50" height="50">
+            <img
+              class="home-main__expertises-img"
+              src="assets/SassLogo.png"
+              alt=""
+              width="50"
+              height="50"
+            />
             <p class="home-main__expertises-subtitle">
               Sass is a preprocessor allowing me to have more readable and less
               repetitive code and therefore I gain speed.
