--- a/index.html
+++ b/index.html
@@ -140,27 +140,19 @@
               <p class="home-main__card-subtitle">
                 I did that with <b>Html</b> and <b>Sass</b>
               </p>
-              <div class="home-main__card-img">
+              <div class="home-main__card-img-aqua">
                 <img
                   src="assets/AquariumPhoto1.png"
                   alt=""
                   width="290"
                   height="320"
                 />
-                <div class="home-main__card-img__side-right">
                   <img
                     src="assets/AquariumPhoto2.png"
                     alt=""
                     width="290"
-                    height="160"
+                    height=""
                   />
-                  <img
-                    src="assets/AquariumPhoto3.png"
-                    alt=""
-                    width="290"
-                    height="160"
-                  />
-                </div>
               </div>
               <div class="home-main__card-action">
                 <i class="fa-regular fa-heart"></i>
@@ -197,7 +189,7 @@
                 <img
                   src="assets/ArgentBank.png"
                   alt=""
-                  width="580"
+                  width="590"
                   height="320"
                 />
               </div>
