--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </h1>
             <p class="l-header__subtitle">Brings ideas to life with code! ✨</p>
             <p class="l-header__subtitle-presentation">
-              Welcome to my profile! I'm a Front-end developer, actively seeking
+              Welcome to my profile! I'm web developer, actively seeking
               an internship. You'll get to know me better by exploring this
               profile.
             </p>
@@ -130,7 +130,7 @@
               <div class="home-main__card-name-date">
                 <p class="home-main__card-name">Alexjs ✨</p>
                 <p class="home-main__card-date">
-                  <i class="fa-solid fa-circle"></i> 21 Feb 2024
+                  <i class="fa-solid fa-circle"></i> 14 mars 2024
                 </p>
               </div>
               <p class="home-main__card-tag">🐳 Aquarium</p>
@@ -175,7 +175,7 @@
               <div class="home-main__card-name-date">
                 <p class="home-main__card-name">Alexjs ✨</p>
                 <p class="home-main__card-date">
-                  <i class="fa-solid fa-circle"></i> 21 Feb 2024
+                  <i class="fa-solid fa-circle"></i> 6 Dec 2023
                 </p>
               </div>
               <p class="home-main__card-tag">🌱 Argent Bank</p>
@@ -214,7 +214,7 @@
               <div class="home-main__card-name-date">
                 <p class="home-main__card-name">Alexjs ✨</p>
                 <p class="home-main__card-date">
-                  <i class="fa-solid fa-circle"></i> 21 Feb 2024
+                  <i class="fa-solid fa-circle"></i> 2 Nov 2023
                 </p>
               </div>
               <p class="home-main__card-tag">📸 Portfolio</p>
